# spideroak-exercise

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-and-run.sh  coding-exercise.md
Program1/: CMakeLists.txt  main.cpp
Program2/: CMakeLists.txt  main.cpp
crypto/: crypto.cpp  crypto.hpp
lib/crypto/: CMakeLists.txt  crypto.cpp  crypto.hpp
src/Program1/: main.cpp
src/Program2/: main.cpp
test/: test.cpp
